--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Hello NGINX 3</h1>
+    <h1>Hello NGINX </h1>
     <p>eleks</p>
 </body>
 </html>
